--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/property_db
+MONGODB_URI=mongodb+srv://kajman5021_db_user:HtQmncmuvqeSpLDv@m2notarialnie.jw10ja4.mongodb.net/?retryWrites=true&w=majority&appName=M2Notarialnie
 NODE_ENV=development
 
 EMAIL_HOST=smtp.gmail.com
