--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ NODE_ENV=development
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=twoj.email@gmail.com
-EMAIL_PASS=twoje_haslo_aplikacji
-ADMIN_EMAIL=twoj.email@gmail.com
+EMAIL_USER=kajman5021@gmail.com
+EMAIL_PASS=vuir lywp eagg slnr
+ADMIN_EMAIL=kajman5021@gmail.com
