--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://kajman5021_db_user:HtQmncmuvqeSpLDv@m2notarialnie.jw10ja4.mongodb.net/?retryWrites=true&w=majority&appName=M2Notarialnie
 NODE_ENV=development
-FRONTEND_URL=https://m2notarialnie.pl
+FRONTEND_URL=http://localhost:5173
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=kajman5021@gmail.com
